# bpuyoai

./: BpuyoAI.sln  BpuyoAI.vcxproj  BpuyoAI.vcxproj.filters  CMakeLists.txt  README.md  ai.txt  main.cpp  pad.h  puyo_ai.h  puyo_ai.lib
include/: chain.cpp  chain.h  field.cpp  field.h  input.cpp  input.h  kumipuyo.cpp  kumipuyo.h  puttype.cpp  puttype.h  puyo_ai.h  rotatetype.h  search.h  search_until_next.cpp  search_until_next.h  simulator.cpp  simulator.h  state.cpp  state.h  types.h
src/: CMakeLists.txt  bpuyo.cpp  bpuyo.h  bpuyopad.cpp  bpuyopad.h  chain.cpp  chain.h  command.h  debug.h  field.cpp  field.h  fin.cpp  fin.h  kumipuyo.cpp  kumipuyo.h  mawashi.cpp  mawashi.h  mawashiputscore.h  mawashiputsimulator.cpp  mawashiputsimulator.h  mawashistate.cpp  mawashistate.h  mode.h  ojama.h  ojamasimulator.cpp  ojamasimulator.h  ojamatable.h  pad.h  padsearch.cpp  padsearch.h  puttype.cpp  puttype.h  rotatetype.h  search.h  search_until_next.cpp  search_until_next.h  searchresult.h  searchresultqueue.h  simulator.cpp  (+7 more)
test/field/: CMakeLists.txt  input.cpp  main.cpp
test/kumipuyo/: CMakeLists.txt  test.cpp
test/padsearch/: CMakeLists.txt  test.cpp
test/padsearch/droporder/: untilnext_notfound.toml
test/search/: CMakeLists.txt  test.cpp
test/search/untilnext/: untilnext_01.toml
test/simulator/: CMakeLists.txt  a.out  test.cpp
test/simulator/addpuyo/: addpuyo_01.toml  addpuyo_02.toml  addpuyo_03.toml  addpuyo_04.toml  addpuyo_05.toml  addpuyo_06.toml  addpuyo_r13.toml  addpuyo_r14.toml
test/simulator/calculateput/: calculateput_bigchigiri.toml  calculateput_putindex00.toml  calculateput_putindex01.toml  calculateput_putindex02.toml  calculateput_putindex06.toml  calculateput_putindex10chigiri01.toml  calculateput_putindex12chigiri02.toml  calculateput_putindex19.toml  calculateput_r12.toml  calculateput_r13.toml
test/simulator/canput/: _canput_c1r12c2r11.toml  _canput_c1r13c2r12c3r11.toml  _canput_c2r12c3r11.toml  _canput_c4r11c5r12c6r12.toml  _canput_c4r12c3r11.toml  canput_c1r12.toml  canput_c2r12.toml  canput_c3r12.toml  canput_c4r12.toml  canput_c5r12.toml  canput_c6r12.toml
test/simulator/chain/: chain_2double.toml  chain_2quadruple.toml  chain_2triple.toml  chain_chainnormal00.toml  chain_connection10.toml  chain_connection11.toml  chain_connection12.toml  chain_connection13.toml  chain_none.toml  chain_normal01.toml  chain_normal02.toml  chain_normal03.toml  chain_normal04.toml  chain_normal05.toml
test/simulator/eliminate/: eliminate_01.toml  eliminate_02.toml  eliminate_03.toml  eliminate_04.toml  eliminate_05.toml  eliminate_06.toml  eliminate_empty.toml  eliminate_ojama.toml  eliminate_r12.toml  eliminate_r13.toml
test/simulator/fall/: fall_r13.toml  fall_random01.toml  fall_random02.toml
test/simulator/put/: put_putindex00r01.toml  put_putindex01r01.toml  put_putindex02r01.toml  put_putindex03r02.toml  put_putindex04r02chigiri01.toml  put_putindex05r04.toml  put_putindex06r04.toml
(+65 files in other folders)
